--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      min-height: 100vh;
+      min-height: 100svh;
       display: flex;
       flex-direction: column;
     }
@@ -20,15 +20,14 @@
       align-items: center;
     }
     h1 {
-      margin-bottom: 32px;
-      font-size: 2.5rem;
-      letter-spacing: 2px;
+      font-size: 3rem;
+      letter-spacing: 0.25rem;
     }
     .search-box {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 16px;
+      gap: 1rem;
       width: 420px;
       max-width: 90vw;
     }
@@ -61,9 +60,6 @@
     }
     .coming-soon-message {
       display: none;
-      color: #0078d4;
-      margin-top: 20px;
-      font-size: 1.2rem;
     }
     footer {
       text-align: center;
@@ -90,7 +86,7 @@
         <button type="submit">Search</button>
       </div>
     </form>
-    <div id="coming-soon-message" style="display:none; color:#0078d4; margin-top:20px; font-size:1.2rem;">
+    <div id="coming-soon-message" class="coming-soon-message">
       Coming soon!
     </div>
   </div>
