Add some mock search results

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <button type="submit">Search</button>
       </div>
     </form>
-    <div id="coming-soon-message" class="coming-soon-message">
-      Coming soon!
+    <div id="search-results" class="search-results">
+      <!-- Search results will be displayed here -->
     </div>
   </div>
   <footer>
