Make search results a bit more compact

--- a/index.html
+++ b/index.html
@@ -25,15 +25,11 @@
     <div class="search-result">
       <h3></h3>
       <div class="search-result-details">
-        <div class="search-result-detail">
-          <span class="search-result-label">Valid From:</span>
+        <div class="search-result-detail" style="grid-column: 1 / span 1;">
+          <span class="search-result-label">Valid:</span>
           <span class="search-result-value"></span>
         </div>
-        <div class="search-result-detail">
-          <span class="search-result-label">Valid To:</span>
-          <span class="search-result-value"></span>
-        </div>
-        <div class="search-result-detail" style="grid-column: 1 / span 2;">
+        <div class="search-result-detail" style="grid-column: 2 / span 1;">
           <span class="search-result-label">Issuer:</span>
           <span class="search-result-value"></span>
         </div>
