Clean up search results a bit

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <div class="search-result">
         <h3></h3>
         <div class="search-result-details">
-          <div class="search-result-detail">
-            <span class="search-result-label">Valid:</span>
-            <span class="search-result-value"></span>
+          <div class="validity">
+            <span class="label">Valid:</span>
+            <span class="value"></span>
           </div>
-          <div class="search-result-detail">
-            <span class="search-result-label">Issuer:</span>
-            <span class="search-result-value"></span>
+          <div class="issuer">
+            <span class="label">Issuer:</span>
+            <span class="value"></span>
           </div>
         </div>
       </div>
