--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div id="search-results" class="search-results">
         <!-- Search results will be displayed here -->
       </div>
+      <div id="loading-spinner"></div>
     </div>
 
     <!-- Templates -->
